Changes i forgot to include in f196dcde0f0f0f4e45ae18a349d1c4c0f772d2ca

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,1 +1,6 @@
-executable('game-of-life','main.cpp', dependencies:[sfml_graphics, sfml_system, sfml_window, boost],install: true)
+src=[
+    'main.cpp',
+    'board.cpp',
+    'parsing.cpp',
+]
+executable('game-of-life',src, dependencies:[sfml_graphics, sfml_system, sfml_window, boost],install: true)
