Add class BoardConfig, add utilities.hpp/.cpp

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,6 +1,8 @@
 src=[
     'main.cpp',
     'board.cpp',
-    'parsing.cpp',
+    'config.cpp',
+    'boardconfig.cpp',
+    'utilities.cpp'
 ]
 executable('game-of-life',src, dependencies:[sfml_graphics, sfml_system, sfml_window, boost],install: true)
