--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install meson
-        run: apt install meson
+        run: sudo apt install meson
         
       - name: Install dependencies
-        run: apt install libsfml-dev libboost-all-dev
+        run: sudo apt install libsfml-dev libboost-all-dev
         
       - name: Configure the project with meson
         run: meson build
