Don't install boost library, set BOOST_ROOT Boost library is defaultly installed on windows latest runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,9 @@ jobs:
         run: choco install meson ninja
 
       - name: Install dependencies
-        run: vcpkg install boost sfml
+        run: vcpkg install sfml
+
+      - run: set BOOST_ROOT=BOOST_ROOT_1_72_0
 
       - name: Configure the project with meson
         run: meson build
