--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,19 +36,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install meson and ninja
-        run: choco install meson ninja
+      - name: Install meson
+        run: python -m pip install --user meson
 
-      - name: Refresh environment variables
-        run: refreshenv
+      - name: Install ninja
+        run: choco install ninja
 
       - name: Install dependencies
         run: vcpkg install sfml
 
       - run: set BOOST_ROOT=BOOST_ROOT_1_72_0
 
-      - name: Configure the project with meson
-        run: meson.py build
+      - name: Setup the project with meson
+        run: python -m meson build
 
       - name: Compile
         run: ninja -vC build    
