--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: set PATH=%PATH%;C:\Users\runneradmin\AppData\Roaming\Python\Python37\Scripts
+      - run: set PATH=%PATH%^;C:\Users\runneradmin\AppData\Roaming\Python\Python37\Scripts
 
       - name: Install meson
         run: python -m pip install --user meson
