--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: set PATH="%PATH%;C:\Users\runneradmin\AppData\Roaming\Python\Python37\Scripts"
-
       - name: Install meson
         run: python -m pip install --user meson
+
+      - run: set PATH=%PATH%;C:\Users\runneradmin\AppData\Roaming\Python\Python37\Scripts
 
       - name: Install ninja
         run: choco install ninja
