Append Path by changing GITHUB_PATH https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set Path
-        run: 'env:Path+=";C:\Users\runneradmin\AppData\Roaming\Python\Python37\Scripts"'
+        run: echo "C:\Users\runneradmin\AppData\Roaming\Python\Python37\Scripts" >> $GITHUB_PATH
 
       - name: Install meson
         run: python -m pip install --user meson
