--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set Path
-        run: echo "C:\Users\runneradmin\AppData\Roaming\Python\Python37\Scripts" >> $GITHUB_PATH
+        run: $env:GITHUB_PATH += "C:\Users\runneradmin\AppData\Roaming\Python\Python37\Scripts"
 
       - name: Install meson
         run: python -m pip install --user meson
