--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,15 @@ jobs:
       - name: Install ninja
         run: choco install ninja
 
-      - name: Install dependencies
-        run: vcpkg install sfml
+      - name: Install sfml
+        run: |
+            $url = "https://www.sfml-dev.org/files/SFML-2.5.1-windows-gcc-7.3.0-mingw-64-bit.zip"
+            $archive = "sfml.zip"
+            $dir = "sfml"
+
+            $wc = New-Object System.Net.WebClient
+            $wc.DownloadFile($url, $output)
+            Expand-Archive -LiteralPath $output -DestinationPath $dir
 
       - run: set BOOST_ROOT=BOOST_ROOT_1_72_0
 
