Put current path in path variable use it to produce absolute paths

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,10 @@ jobs:
 
       - name: Install sfml
         run: |
+            $path = (Get-Location).Path
             $url = "https://www.sfml-dev.org/files/SFML-2.5.1-windows-gcc-7.3.0-mingw-64-bit.zip"
-            $archive = (Get-Location)+"sfml.zip"
-            $dir = (Get-Location)+"sfml"
+            $archive = "$path\sfml.zip"
+            $dir = "$path\sfml"
 
             $wc = New-Object System.Net.WebClient
             $wc.DownloadFile($url, $output)
