Save archive with sfml to sfml.zip

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,10 +47,9 @@ jobs:
 
       - name: Install sfml
         run: |
-            $path = (Get-Location).Path
             $url = "https://www.sfml-dev.org/files/SFML-2.5.1-windows-gcc-7.3.0-mingw-64-bit.zip"
-            $archive = "$path\sfml.zip"
-            $dir = "$path\sfml"
+            $archive = "c:\sfml.zip"
+            $dir = "c:\sfml"
 
             $wc = New-Object System.Net.WebClient
             $wc.DownloadFile($url, $output)
