--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,8 +51,7 @@ jobs:
             $archive = "c:\sfml.zip"
             $dir = "c:\sfml"
 
-            $wc = New-Object System.Net.WebClient
-            $wc.DownloadFile($url, $output)
+            Invoke-WebRequest -Uri $url -OutFile $archive
             Expand-Archive -LiteralPath $output -DestinationPath $dir
 
       - run: set BOOST_ROOT=BOOST_ROOT_1_72_0
