--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,11 +49,11 @@ jobs:
         run: |
             $url = "https://www.sfml-dev.org/files/SFML-2.5.1-windows-gcc-7.3.0-mingw-64-bit.zip"
             $archive = "c:\sfml.zip"
-            $dir = "c:\sfml"
+            $dir = "c:\"
 
             Invoke-WebRequest -Uri $url -OutFile $archive
             Expand-Archive -LiteralPath $archive -DestinationPath $dir
-
+            echo "CMAKE_PREFIX_PATH=$dir\SFML-2.5.1" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - run: set BOOST_ROOT=BOOST_ROOT_1_72_0
 
       - name: Setup the project with meson
