Replace sfml with SFML

--- a/meson.build
+++ b/meson.build
@@ -5,6 +5,6 @@ project(
 	license: 'GPLv3',
 	meson_version: '>=0.45.0',
 )
-sfml = dependency('sfml')
+sfml = dependency('SFML')
 boost = dependency('boost', modules :['program_options'])
 subdir('src')
