--- a/meson.build
+++ b/meson.build
@@ -9,4 +9,5 @@ sfml_graphics = dependency('sfml-graphics')
 sfml_system = dependency('sfml-system')
 sfml_window = dependency('sfml-window')
 boost = dependency('boost', modules :['program_options'])
+libpng = dependency('libpng')
 subdir('src')
