Load board from png image

--- a/meson.build
+++ b/meson.build
@@ -10,4 +10,5 @@ sfml_system = dependency('sfml-system')
 sfml_window = dependency('sfml-window')
 boost = dependency('boost', modules :['program_options'])
 libpng = dependency('libpng')
+pngpp = declare_dependency(include_directories: '/usr/include/png++')
 subdir('src')
