--- a/meson.build
+++ b/meson.build
@@ -10,5 +10,5 @@ sfml_system = dependency('sfml-system')
 sfml_window = dependency('sfml-window')
 boost = dependency('boost', modules :['program_options'])
 libpng = dependency('libpng')
-pngpp = declare_dependency(include_directories: '/usr/include/png++')
+pngpp = declare_dependency(include_directories: include_directories('/usr/include/png++'))
 subdir('src')
