--- a/meson.build
+++ b/meson.build
@@ -10,5 +10,6 @@ sfml_system = dependency('sfml-system')
 sfml_window = dependency('sfml-window')
 boost = dependency('boost', modules :['program_options'])
 libpng = dependency('libpng')
-pngpp = declare_dependency(include_directories: include_directories('/usr/include/png++'))
+pngpp_dir=get_option('pngpp_dir')
+pngpp = declare_dependency(include_directories: include_directories(pngpp_dir))
 subdir('src')
