game-of-life.desktop: Remove X-AppImage-Version and correct Icon to game-of-life

--- a/game-of-life.desktop
+++ b/game-of-life.desktop
@@ -2,6 +2,5 @@
 Type=Application
 Exec=game-of-life %u
 Name=Game of life
-Icon=rysunek
+Icon=game-of-life
 Categories=Game
-X-AppImage-Version=4f91777
