Install game-of-life.desktop and icons

--- a/meson.build
+++ b/meson.build
@@ -13,3 +13,5 @@ libpng = dependency('libpng')
 pngpp_dir=get_option('pngpp_dir')
 pngpp = declare_dependency(include_directories: include_directories(pngpp_dir))
 subdir('src')
+install_data('game-of-life.desktop', install_dir: 'share/applications')
+install_subdir('icons', install_dir: 'share/icons/hicolor', strip_directory: true)
