--- a/src/meson.build
+++ b/src/meson.build
@@ -3,6 +3,7 @@ src=[
     'board.cpp',
     'config.cpp',
     'boardconfig.cpp',
-    'utilities.cpp'
+    'utilities.cpp',
+    'appearanceconfig.cpp'
 ]
 executable('game-of-life',src, dependencies:[sfml_graphics, sfml_system, sfml_window, boost, libpng, pngpp],install: true)
