--- a/src/meson.build
+++ b/src/meson.build
@@ -4,6 +4,7 @@ src=[
     'config.cpp',
     'boardconfig.cpp',
     'utilities.cpp',
-    'appearanceconfig.cpp'
+    'appearanceconfig.cpp',
+    'background.cpp'
 ]
 executable('game-of-life',src, dependencies:[sfml_graphics, sfml_system, sfml_window, boost, libpng, pngpp],install: true)
