--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-Ubuntu:
     name: "Build Appimage on Ubuntu"
     runs-on: ubuntu-latest
 
@@ -44,3 +44,22 @@ jobs:
         with:
           name: AppImage
           path: Game_of_life*
+  build-Windows:
+    name: "Build on Windows"
+    runs-on: windows-latest
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Install meson
+        run: pip install meson
+      
+      - name: Install ninja
+        run: choco install ninja
+
+      - name: Configure the project with meson
+        run: meson build
+      
+      - name: Compile
+        name: ninja -C build
