Use MinGW Makefiles cmake genarator

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
             Expand-Archive -LiteralPath $archive -DestinationPath $dir
 
       - name: Configure the project with cmake
-        run: cmake .
+        run: cmake . -G "MinGW Makefiles"
       
       - name: Compile
-        run: make
+        run: mingw32-make
