--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,12 +63,11 @@ jobs:
 
       - name: Download and build Boost
         run: |
-            $url = "https://deac-ams.dl.sourceforge.net/project/boost/boost/1.77.0/boost_1_77_0.zip"
-            $archive = "boost.zip"
-            $dir = "."
+            $url = "https://deac-ams.dl.sourceforge.net/project/boost/boost/1.77.0/boost_1_77_0.7Z"
+            $archive = "boost.7z"
 
             Invoke-WebRequest -Uri $url -OutFile $archive
-            Expand-Archive -LiteralPath $archive -DestinationPath $dir
+            7z e $archive
             
             cd boost_1_77_0
             .\bootstrap.bat gcc
