--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,13 +63,13 @@ jobs:
 
       - name: Download and build Boost
         run: |
-            $url = "https://deac-ams.dl.sourceforge.net/project/boost/boost/1.77.0/boost_1_77_0.7z"
+            $url = "https://boostorg.jfrog.io/artifactory/main/release/1.78.0/source/boost_1_78_0.7z"
             $archive = "boost.7z"
 
             Invoke-WebRequest -Uri $url -OutFile $archive
             7z e $archive -y
             
-            cd boost_1_77_0
+            cd boost_1_78_0
             .\bootstrap.bat gcc
             .\b2 --build-dir=build cxxflags="-std=c++11" -j5 --with-program_options toolset=gcc stage
             cd ..
