--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,8 +80,7 @@ jobs:
       
       - name: Configure the project with cmake
         run: |
-          cmake . -G "MinGW Makefiles" -D "BOOST_ROOT=${{ steps.boost.outputs.root }}" \
-            -D "BOOST_LIBRARYDIR=${{ steps.boost.outputs.librarydir }}"
+          cmake . -G "MinGW Makefiles" -D "BOOST_ROOT=${{ steps.boost.outputs.root }}" -D "BOOST_LIBRARYDIR=${{ steps.boost.outputs.librarydir }}"
       
       - name: Compile
         run: mingw32-make
