--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(game_of_life src/main.cpp src/board.cpp src/config.cpp src/boardc
     src/utilities.cpp src/appearanceconfig.cpp src/background.cpp)
 
 target_link_libraries(game_of_life sfml-graphics sfml-system sfml-window PNG::PNG Boost::program_options)
+target_include_directories(game_of_life PUBLIC png++)
