--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,17 @@ IF (WIN32)
     
     set(BOOST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/boost_1_77_0")
 ENDIF()
+
+# PNG++_DIR is a path do dir with png++ dir
+# When not set by argument to cmake its value is set to CMAKE_CURRENT_DIR
+# Change it if you have your png++ in other dir
+# If you have it in /usr/include you don't need to do anything since cmake
+# includes all of /usr/include
+if(NOT PNG++_DIR)
+    message(STATUS "Set PNG++_DIR")
+endif()
+message(STATUS "PNG++_DIR set to ${PNG++_DIR}")
+
 find_package(SFML 2.5.1 COMPONENTS graphics system window REQUIRED)
 include(FindPNG)
 find_package(Boost COMPONENTS program_options REQUIRED)
@@ -17,4 +28,4 @@ add_executable(game_of_life src/main.cpp src/board.cpp src/config.cpp src/boardc
     src/utilities.cpp src/appearanceconfig.cpp src/background.cpp)
 
 target_link_libraries(game_of_life sfml-graphics sfml-system sfml-window PNG::PNG Boost::program_options)
-target_include_directories(game_of_life PUBLIC png++)
+target_include_directories(game_of_life PUBLIC "${PNG++_DIR}")
