--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,3 +94,9 @@ jobs:
       
       - name: Compile
         run: mingw32-make
+
+      - name: Save executable
+        uses: actions/upload-artifact@v2
+        with:
+          name: Windows Executable
+          path: game_of_life.exe
