--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,11 @@ add_executable(game_of_life src/main.cpp src/board.cpp src/config.cpp src/boardc
 
 target_link_libraries(game_of_life sfml-graphics sfml-system sfml-window PNG::PNG Boost::program_options)
 target_include_directories(game_of_life PUBLIC "${PNG++_DIR}")
+
+include(CPack)
+install(TARGETS game_of_life)
+install(IMPORTED_RUNTIME_ARTIFACTS game_of_life RUNTIME)
+IF (UNIX AND NOT APPLE)
+    install(FILES "game-of-life.desktop" DESTINATION "share/applications")
+    install(DIRECTORY "icons/" DESTINATION "share/icons/hicolor")
+ENDIF()
