Make packages on Windows workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,6 +95,9 @@ jobs:
       - name: Compile
         run: mingw32-make
 
+      - name: Create packages
+        run: migw32-make package
+
       - name: Save executable
         uses: actions/upload-artifact@v2
         with:
