--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,8 +98,8 @@ jobs:
       - name: Create packages
         run: mingw32-make package
 
-      - name: Save executable
+      - name: Save installer
         uses: actions/upload-artifact@v2
         with:
-          name: Windows Executable
-          path: game_of_life.exe
+          name: Windows installer
+          path: game_of_life-*-win64.exe
