Add libPNG shared libraries to Windows install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,4 +37,6 @@ install(IMPORTED_RUNTIME_ARTIFACTS game_of_life RUNTIME)
 IF (UNIX AND NOT APPLE)
     install(FILES "game-of-life.desktop" DESTINATION "share/applications")
     install(DIRECTORY "icons/" DESTINATION "share/icons/hicolor")
+ELSEIF(WIN32)
+    install(FILES ${PNG_LIBRARIES} DESTINATION "bin")
 ENDIF()
