Use sf::Image instead of libpng

--- a/src/meson.build
+++ b/src/meson.build
@@ -7,4 +7,4 @@ src=[
     'appearanceconfig.cpp',
     'background.cpp'
 ]
-executable('game-of-life',src, dependencies:[sfml_graphics, sfml_system, sfml_window, boost, libpng, pngpp],install: true)
+executable('game-of-life',src, dependencies:[sfml_graphics, sfml_system, sfml_window, boost],install: true)
