CMake: Remove libpng and png++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,22 +14,13 @@ IF (WIN32)
     endif()
 ENDIF()
 
-# PNG++_DIR is a path do dir with png++ dir
-# When not set by argument to cmake its value is set to CMAKE_CURRENT_DIR
-# Change it if you have your png++ in other dir
-# If you have it in /usr/include you don't need to do anything since cmake
-# includes all of /usr/include
-message(STATUS "PNG++_DIR set to ${PNG++_DIR}")
-
 find_package(SFML 2.5.1 COMPONENTS graphics system window REQUIRED)
-include(FindPNG)
 find_package(Boost COMPONENTS program_options REQUIRED)
 
 add_executable(game_of_life src/main.cpp src/board.cpp src/config.cpp src/boardconfig.cpp
     src/utilities.cpp src/appearanceconfig.cpp src/background.cpp)
 
-target_link_libraries(game_of_life sfml-graphics sfml-system sfml-window ${PNG_LIBRARIES} Boost::program_options)
-target_include_directories(game_of_life PUBLIC ${PNG_INCLUDE_DIRS} "${PNG++_DIR}")
+target_link_libraries(game_of_life sfml-graphics sfml-system sfml-window Boost::program_options)
 
 include(CPack)
 install(TARGETS game_of_life)
