--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,18 +23,12 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: sudo apt update
-
-      - name: Install meson
-        run: sudo apt install meson
         
-      - name: Install dependencies
-        run: sudo apt install libsfml-dev libboost-program-options-dev
-        
-      - name: Configure the project with meson
-        run: meson build -Dprefix=$(pwd)/AppDir/usr
+      - name: Configure the project with CMake
+        run: cmake -B build -DCMAKE_INSTALL_PREFIX=AppDir/usr
         
       - name: Compile and install to AppDir
-        run: ninja -vC build install
+        run: make -C build install
 
       - name: Download linuxdeploy
         run: wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage && chmod +x linuxdeploy-x86_64.AppImage
