--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: sudo apt update
-      - run: sudo apt install libopengl-dev libopenal-dev libxrandr2 libgl-dev libflac++-dev libudev-dev libvorbis-dev
+      - run: sudo apt install libopengl-dev libopenal-dev libxrandr-dev libgl-dev libflac++-dev libudev-dev libvorbis-dev
         
       - name: Configure the project with CMake
         run: cmake -B build -DCMAKE_INSTALL_PREFIX=AppDir/usr
