Add make AppImage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,29 @@ IF (UNIX AND NOT APPLE)
     install(FILES "game-of-life.desktop" DESTINATION "share/applications")
     install(DIRECTORY "icons/" DESTINATION "share/icons/hicolor")
 ENDIF()
+IF (LINUX)
+    add_custom_command(
+        OUTPUT ${PROJECT_BINARY_DIR}/Appdir/ 
+        DEPENDS game-of-life
+        DEPENDS icons/
+        COMMAND ${CMAKE_COMMAND} --install ${PROJECT_BINARY_DIR} --prefix ${PROJECT_BINARY_DIR}/AppDir/usr
+    )
+    set(linuxdeploy ${PROJECT_BINARY_DIR}/linuxdeploy-x86_64.AppImage)
+    file(
+        GENERATE OUTPUT ${PROJECT_BINARY_DIR}/linuxdeploy.cmake
+        CONTENT "file(DOWNLOAD\
+        https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage ${linuxdeploy})\n\
+        file(CHMOD ${linuxdeploy} PERMISSIONS OWNER_EXECUTE OWNER_READ)"
+    )
+    add_custom_command(
+        OUTPUT ${PROJECT_BINARY_DIR}/linuxdeploy-x86_64.AppImage
+        COMMAND ${CMAKE_COMMAND} -P ${PROJECT_BINARY_DIR}/linuxdeploy.cmake
+    )
+    add_custom_command(
+        OUTPUT ${PROJECT_BINARY_DIR}/Game_of_life-x86_64.AppImage
+        DEPENDS ${PROJECT_BINARY_DIR}/Appdir/ 
+        DEPENDS ${PROJECT_BINARY_DIR}/linuxdeploy-x86_64.AppImage
+        COMMAND ${PROJECT_BINARY_DIR}/linuxdeploy-x86_64.AppImage --appdir AppDir --output appimage
+    )
+    add_custom_target(AppImage DEPENDS ${PROJECT_BINARY_DIR}/Game_of_life-x86_64.AppImage) 
+ENDIF()
