--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,28 +23,19 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: sudo apt update
-      - run: sudo apt install libopengl-dev libopenal-dev xorg-dev libgl-dev libflac++-dev libudev-dev libvorbis-dev
+      - run: sudo apt install libopengl-dev libopenal-dev xorg-dev libgl-dev libflac++-dev libudev-dev libvorbis-dev libfuse2
         
       - name: Configure the project with CMake
-        run: cmake -B build -DCMAKE_INSTALL_PREFIX=AppDir/usr
+        run: cmake -B build
         
-      - name: Compile and install to AppDir
-        run: make -C build install
-
-      - name: Download linuxdeploy
-        run: wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage && chmod +x linuxdeploy-x86_64.AppImage
-
-      - name: Add linuxdeploy dependency
-        run: sudo add-apt-repository universe; sudo apt install libfuse2
-
-      - name: Create AppImage
-        run: ./linuxdeploy-x86_64.AppImage --appdir AppDir --output appimage
+      - name: Compile and build AppImage
+        run: make -C build AppImage
 
       - name: Save AppImage
         uses: actions/upload-artifact@v4
         with:
           name: AppImage
-          path: Game_of_life*
+          path: build/Game_of_life*
   build-Windows:
     name: "Build on Windows"
     runs-on: windows-latest
