--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build
-    uses: .github/workflows/main.yml
+    uses: ./.github/workflows/main.yml
   release:
     needs: build
     name: Release
