--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,9 +12,12 @@ jobs:
   build:
     name: Build
     uses: ./.github/workflows/main.yml
+
   release:
     needs: build
     name: Release
+    runs-on: ubuntu-latest
+
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
