--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
       - name: Install FUSE
-        uses: sudo apt update; sudo apt install libfuse2
+        run: sudo apt update; sudo apt install libfuse2
       - name: Create release and upload artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
