--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,10 +45,10 @@ jobs:
         run: cmake . 
 
       - name: Compile
-        run: cmake --build .
+        run: cmake --build . --config Release
 
       - name: Save executable
         uses: actions/upload-artifact@v4
         with:
           name: Windows executable
-          path: Debug/game-of-life.exe
+          path: Release/game-of-life.exe
