--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Configure the project with cmake
-        run: cmake . 
+        run: cmake . -G "MinGW Makefiles"
 
       - name: Compile
-        run: cmake --build . --config Release
+        run: cmake --build .
 
       - name: Save executable
         uses: actions/upload-artifact@v4
